# Compiler

./: CMakeLists.txt
src/Ast/: SyntaxTree.hpp
src/FileManagement/: FManager.hpp
src/Lexer/: Lexer.hpp  Lexer_config.hpp
src/Parser/: Parser.hpp  SyntaxTree.hpp
src/Types/: Type.hpp
